5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1791_1621.log
== TEST (2019-05-29 14:39:48) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0
while(vet[i] == vet[j]):
	i = i + 1
	j = j + 1
	x = i * j
print(round(x, 2)
		
-- ERROR:
File "XXXX", line 12
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:27) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet[i] == vet[j]):
	i = i + 1
	j = j + 1
	x = i * j
	
	print(round(x, 2)
		
-- ERROR:
File "XXXX", line 14
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:40:47) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet[i] == vet[j]):
	i = i + 1
	j = j + 1
x = i * j
	
print(round(x, 2)
		
-- ERROR:
File "XXXX", line 14
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet[i] == vet[j]):
	i = i + 1
	j = j + 1
x = i * j
	
print(round(x, 2)		
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:53) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

if(vet[i] == vet[j]):
	i = i + 1
	j = j + 1
x = i * j
	
print(round(x, 2)		
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:14) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet1[i] == vet2[j]):
	i = i + 1
	j = j + 1
x = i * j
	
print(round(x, 2)		
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:43:57) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet1[i] == vet2[j]):
	i = i + 1
	j = j + 1
x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:44:50) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2[i] > 0 ):
	i = i + 1
	j = j + 1
x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 13
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:00) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2[i] > 0 ):
	if(vet[0] )
	i = i + 1
	j = j + 1
x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 8
    if(vet[0] )
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:35) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2[i] > 0 ):
	if(vet1[i] >= vet2[j] )
	i = i + 1
	j = j + 1
x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 8
    if(vet1[i] >= vet2[j] )
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:51:41) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2[i] > 0 ):
	if(vet1[i] >= vet2[j] ):
	i = i + 1
	j = j + 1
x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:52:55) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0


if(vet1[i] >= vet2[j]):
	i = i + 1
	j = j + 1
	x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:53:52) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2)		
-- ERROR:
File "XXXX", line 14
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:54:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:00) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:06) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:"))).upper()
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:56:04) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:28) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(int(input("vetores:"))))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:57:57) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(vet2 > 0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:58:44) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(vet2>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:13) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(vet2>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:59:57) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(vet2>0 and (vet1>0)):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:29) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:48) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(vet1)
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:00:59) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(vet1)
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:27) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] => vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(i, 2))	
-- ERROR:
File "XXXX", line 8
    if(vet1[i] => vet2[j]):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:35) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:01:52) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:20) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:24) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:26) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:26) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:26) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:27) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:38) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:39) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:42) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:44) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:45) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:02:54) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:43) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:18) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(vet2>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:39) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(j>0):
	if(vet1[i] >= vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:10) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i=>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
File "XXXX", line 7
    while(i=>0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:15) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
x = i * j
print(round(x, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:38) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
print(round(vet2, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:57) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:06:59) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + 1
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:25) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:41) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>0):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(vet2, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:27) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet)):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(vet2, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:46) 
-- CODE:
from numpy import*
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1[i] == vet2[j]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(vet2, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:57) 
-- CODE:
from numpy import *
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1 == vet2):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(vet2, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:28) 
-- CODE:
from numpy import *
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1[0] == vet2[0]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:48) 
-- CODE:
from numpy import *
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1[0] == vet2[0]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:07) 
-- CODE:
from numpy import *
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1[0] == vet2[0]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:18) 
-- CODE:
from numpy import *
vet1 = array(eval(input("string:")))
vet2 = array(eval(input("vetores:")))
i = 0
j = 0

while(i>size(vet2)):
	if(vet1[0] == vet2[0]):
		i = i + 1
		j = j + 1
		vet2 = vet2 + i
print(round(i, 2))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
